# tripadvisor-absa-llm

./: .env.example  .gitignore  Makefile  app.py  chainlit.md  pyproject.toml  setup.py  test.ipynb
absa/: constants.py  demo.py  process.py
absa/handler/: bigquery.py
absa/utils/: functions.py  models.py
